--- a/Week 2/form.html
+++ b/Week 2/form.html
@@ -62,7 +62,7 @@
                     <td></td>
                     <td>
                         <input type="submit" value="SEND" />
-                        <input type="submit" value="CLEAR" />
+                        <input type="button" value="CLEAR" />
                     </td>
                 </tr>
 
