Practice css selector

--- a/Week 2/form.html
+++ b/Week 2/form.html
@@ -1,5 +1,20 @@
 <html>
 
+    <head>
+        <style>
+            [name="phone"] {
+                background-color: orangered;
+            }
+
+            tr [name="address"] {
+                font-weight: bold;
+            }
+            td select {
+                position: absolute;
+                bottom: 100px;
+            }
+        </style>
+    </head>
     <body>
         <header>
             <h2>HTML Form Input Validation Using JavaScript</h2>
