--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -1,4 +1,16 @@
 <html>
+    <head>
+        <style>
+            span {
+                /* entire line */
+                display: block; 
+            }
+            p {
+                /* resize within content */
+                display: inline;
+            }
+        </style>
+    </head>
     <body>
         <header>
             <h1>CSS Layout Float</h1>
@@ -18,13 +30,16 @@
             <li><a href='#'>Tokyo</a></li>
         </ul>
         <h3>London</h3>
-        <p>
+        <p class="london">
             London is the captial city of England.
             It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.
         </p>
         <p>
             Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.
         </p>
+
+        <span>좋다</span>
+        <p>나쁘다</p>
     </body>
     <footer>
         <h2>Footer</h2>
