--- a/code-crush-saga/index.html
+++ b/code-crush-saga/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="stylesheet" type="text/css" href="./src/styles.css">
   </head>
 
   <body>
@@ -14,6 +14,6 @@
     </form>
     <div id="app"></div>
     <div id="gameBoard"></div>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
