--- a/code-crush-saga/index.html
+++ b/code-crush-saga/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Code Crush Saga</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./src/styles.css">
   </head>
 
   <body>
-    <form id="form">
-      <label>width: <input type="number" name="width" /></label>
-      <label>height: <input type="number" name="height" /></label>
-      <input type="submit" value="제출" />
-    </form>
-    <div id="app"></div>
-    <div id="gameBoard"></div>
+    <div style="text-align:center;">    
+      <h1>Code Crush Saga</h1>
+      
+      <form id="form">
+        <label>Height: <input type="number" name="height" placeholder="6 ~ 10" min="6" max="10" />, </label>
+        <label>Width: <input type="number" name="width" placeholder="6 ~ 10" min="6" max="10" />, </label>
+        <label>Colors: <input type="number" name="colors" placeholder="5 ~ 8" min="5" max="8" /></label>
+        <input type="submit" value="시작" />
+      </form>
+      <div id="app"></div>
+      <hr>
+      <div id="gameBoard"></div>
+    </div>
+    <footer>
+      <div style="text-align:center;">    
+        <p id="textlog"></p>
+      </div>
+    </footer>
     <script src="./src/index.js"></script>
   </body>
 </html>
